# panel-vega-view

./: README.md  app.ipynb  app.py  pyproject.toml
src/panel_vega_view/: __init__.py  vega_view_esm.js
