[project]
name = "panel-vega-view"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sangwon Lee", email = "lsw91.main@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "panel>=1.5.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
